@@ -53,6 +53,7 @@ struct nsd_options {
 	/* list of ip adresses to bind to (or NULL for all) */
 	ip_address_option_t* ip_addresses;
 
+	int ip_transparent;
 	int debug_mode;
 	int verbosity;
 	int hide_version;
